# ProseForge-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.windows.yml  docker-compose.yml  pyproject.toml
configs/: agent.example.yaml  pf-agent.example.yaml  providers.example.yaml  providers.local.example.yaml
docker/: README.md  entrypoint.sh
docs/: developer-extensions.md  operator-quickstart.md
scripts/: _install_lib.sh  install.ps1  install.sh
tests/: test_agent_events_jobs.py  test_agent_kernel.py  test_agent_loop.py  test_agent_profiles_personas.py  test_agent_safety_guard.py  test_agent_tools_permissions.py  test_app_dirs.py  test_attachment_ingestion.py  test_audit_trail_debuggability.py  test_binary_build.py  test_binary_packaging.py  test_capabilities.py  test_chapter_lifecycle.py  test_chapter_review.py  test_chat_cli_repl.py  test_chat_memory_preferences.py  test_chat_prompt_protocol.py  test_chat_retrieval_citations.py  test_chat_session_store.py  test_chat_workflow_handoff.py  test_ci_pipeline.py  test_cli.py  test_cli_commands.py  test_cli_config_yaml_example_seed.py  test_community_and_agent_docs.py  test_complete_agent_release_gate.py  test_concurrency_locking.py  test_config.py  test_context_window_management.py  test_control_interrupt.py  test_conversation_lifecycle.py  test_cross_session_search.py  test_daily_recommendations.py  test_daily_workbook.py  test_default_chat_repl_on_bare_command.py  test_docker_distribution.py  test_dotenv_support.py  (+89 more)
(+697 files in other folders)
